# gwent

./: .gitignore  LICENSE  README.md
data/: cards.json
src/: CMakeLists.txt
src/engine/: Player.cpp  Player.hpp  card.cpp  card.hpp  game_state.cpp  game_state.hpp
tests/: CMakeLists.txt  tests.cpp
